<resources>
    <string name="app_name">DriftDirect - BETA</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_navigation_view">NavigationViewActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="calendar">CALENDAR</string>
    <string name="rule_book">RULE BOOK</string>
    <string name="team_of_judges">TEAM OF JUDGES</string>
    <string name="drivers">DRIVERS</string>
    <string name="rankings">RANKINGS</string>
    <string name="news">NEWS</string>
    <string name="official_sponsors">OFFICIAL SPONSORS</string>
    <string name="buy_tickets_online">BUY TICKETS ONLINE</string>
    <string name="notifications">NOTIFICATIONS</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="open_drawer">Open Drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_championships">ChampionshipsActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="track_layout">TRACK LAYOUT</string>
    <string name="judging_team">JUDGING TEAM</string>
    <string name="qualifications">QUALIFICATIONS</string>
    <string name="top_32_16">TOP 32/16</string>
    <string name="event_schedule">EVENT SCHEDULE</string>
    <string name="live_stream">LIVE STREAM</string>
    <string name="buy_tickets_online_rounds">BUY TICKETS ONLINE</string>
    <string name="title_activity_round_navigation_view">RoundNavigationViewActivity</string>
    <string name="authority_login">AUTHORITY LOGIN</string>
    <string name="title_activity_judge_battle">JudgeBattleActivity</string>
    <string name="title_activity_public_battle_activty">PublicBattleActivty</string>

    <string name="gcm_senderId">528840838587</string>
    <string name="gcm_serverApiKey">AIzaSyAHt0Wg2_LdSX9fh7dhnKOHrvP06tVzdOo</string>

</resources>
