<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single" android:id="@+id/group_normal">
        <item android:id="@+id/calendar"
            android:icon="@drawable/calendar_icon"
            android:title="@string/calendar"/>
        <item android:id="@+id/rule_book"
            android:icon="@drawable/rule_book_icon"
            android:title="@string/rule_book"/>
        <item android:id="@+id/team_of_judges"
            android:icon="@drawable/team_of_judges_icon"
            android:title="@string/team_of_judges"/>
        <item android:id="@+id/drivers"
            android:icon="@drawable/drivers_icon"
            android:title="@string/drivers"/>
        <item android:id="@+id/rankings"
            android:icon="@drawable/ranking_icon"
            android:title="@string/rankings"/>
        <item android:id="@+id/news"
            android:icon="@drawable/news_icon"
            android:title="@string/news"/>
        <item android:id="@+id/official_sponsors"
            android:icon="@drawable/official_sponsors_icon"
            android:title="@string/official_sponsors"/>
        <item android:id="@+id/buy_tickets_online"
            android:icon="@drawable/tickets_icon"
            android:title="@string/buy_tickets_online"/>
        <item android:id="@+id/notifications"
            android:icon="@drawable/notifications_icon"
            android:title="@string/notifications"/>
    </group>

    <group android:checkableBehavior="single" android:id="@+id/group_rounds">
        <item android:id="@+id/track_layout"
            android:title="@string/track_layout"/>
        <item android:id="@+id/judging_team"
            android:title="@string/judging_team"/>
        <item android:id="@+id/qualifications_list"
            android:title="@string/qualifications_list"/>
        <item android:id="@+id/top_16_32"
            android:title="@string/top_16_32"/>
        <item android:id="@+id/event_schedule"
            android:title="@string/event_schedule"/>
        <item android:id="@+id/live_stream"
            android:title="@string/live_stream"/>
        <item android:id="@+id/buy_tickets_online_rounds"
            android:title="@string/buy_tickets_online_rounds"/>
    </group>
</menu>