<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single" android:id="@+id/group_rounds">
        <item android:id="@+id/track_layout"
            android:icon="@drawable/track_layout_icon"
            android:title="@string/track_layout"/>
        <item android:id="@+id/qualifications"
            android:icon="@drawable/qualifications_icon"
            android:title="@string/qualifications"/>
        <item android:id="@+id/top_32_16"
            android:icon="@drawable/top_32_icon"
            android:title="@string/top_32_16"/>
        <item android:id="@+id/event_schedule"
            android:icon="@drawable/event_schedule_icon"
            android:title="@string/event_schedule"/>
        <item android:id="@+id/live_stream"
            android:icon="@drawable/live_stream_icon"
            android:title="@string/live_stream"/>
        <item android:id="@+id/buy_tickets_online_rounds"
            android:icon="@drawable/tickets_icon"
            android:title="@string/buy_tickets_online_rounds"/>
    </group>

</menu>